--- a/DDP-WK4-PITCH/DDP-WK4-Pitch/index.html
+++ b/DDP-WK4-PITCH/DDP-WK4-Pitch/index.html
@@ -47,12 +47,13 @@
     <h2>Introduction</h2>
   </hgroup>
   <article data-timings="">
-    <p>This presentation sets out the exploratory data analysis of the IBM HR Analytics dataset.  This is a fictional dataset provided by IBM scientists and hosted by Kaggle <a href="https://www.kaggle.com/pavansubhasht/ibm-hr-analytics-attrition-dataset">here</a>.  The dataset enables an exploration of the features that might predict why someone would leave the company.</p>
+    <p>This presentation sets out my pitch for a Shiny App that explores data the IBM HR Analytics dataset.  This is a fictional dataset provided by IBM scientists and hosted by Kaggle <a href="https://www.kaggle.com/pavansubhasht/ibm-hr-analytics-attrition-dataset">here</a>.  The dataset enables an exploration of the features that might predict why someone would leave the company.</p>
 
-<p>In this presentation we will:</p>
+<p>This app is great as it might help you stop your employees leaving!
+In this pitch you will get to:</p>
 
 <ul>
-<li>Display some exploratory graphs</li>
+<li>See some exploratory graphs</li>
 <li>Link to the Shiny app that supports this pitch</li>
 </ul>
 
@@ -62,7 +63,7 @@
 
 <slide class="smallCode" id="slide-2" style="background:;">
   <hgroup>
-    <h2>A First Exploration</h2>
+    <h2>Lower Paid People Might Go!</h2>
   </hgroup>
   <article data-timings="">
     <p>The data shows a strong skew towards lower paid employees for both men and women, and with very similar proportions in the payscale.</p>
@@ -83,7 +84,7 @@ q
 
 <slide class="smallCode" id="slide-3" style="background:;">
   <hgroup>
-    <h2>Continuing the Exploration</h2>
+    <h2>What about job types?</h2>
   </hgroup>
   <article data-timings="">
     <p>We can also see the distribution of job types in the dataset.</p>
@@ -100,10 +101,10 @@ q
 
 <slide class="" id="slide-4" style="background:;">
   <hgroup>
-    <h2>The prediction model</h2>
+    <h2>The prediction Shiny model</h2>
   </hgroup>
   <article data-timings="">
-    <p>I would like to predict attrition rate from the variables supplied.  A Random Forest is often a very robust approach.  I have therefore developed a shiny app that enables the user to explore the number of trees grown and the impact on the confusion matrix.</p>
+    <p>A Random Forest is often a very robust approach.  I have therefore developed a shiny app that enables the user to explore the number of trees grown and the impact on the confusion matrix.</p>
 
 <p>The model can be found <a href="https://simbosky.shinyapps.io/ddp-wk4/">here</a></p>
 
@@ -125,6 +126,8 @@ q
 <li>Increasing the number of trees to 500 does not further increase the accuracy beyond 85.68%</li>
 </ul>
 
+<p>Pretty good - you should use it!!</p>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
@@ -141,19 +144,19 @@ q
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=2 title='A First Exploration'>
+        data-slide=2 title='Lower Paid People Might Go!'>
          2
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=3 title='Continuing the Exploration'>
+        data-slide=3 title='What about job types?'>
          3
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=4 title='The prediction model'>
+        data-slide=4 title='The prediction Shiny model'>
          4
       </a>
     </li>
